# Chronos-K1

./: 15c.py  Chronos-K1.txt  EXTERNAL_REVIEW.md  Emergent Sign-Aware.tex  Emergent Sign-Aware.tex.txt  LICENSE  Lorentz step2 causal seq.py  Lorentz step2 v11 ar03.py  Lorentzian Backbone Step 2 (v14c).py  MILESTONES.md  README.md  REPRODUCE.md  chronos_full_denominator.py  chronos_paper_claims.py  requirements.txt
k1-manifold-core/: README.md  pyproject.toml  requirements-benchmarks.txt  setup.py
k1-manifold-core/benchmarks/: README.md  experiment_5_causal_stress_test.py  experiment_5_full_sanity_reproduction.py  experiment_5b_causal_mechanism_ablation.py  experiment_6_physics_sensitivity.py  experiment_7_metric_controlled_normalization.py  experiment_8b_lorenz_benchmark_colab.py  ood_extrapolation.py
k1-manifold-core/datasets/: __init__.py  mixed.py  spacelike.py
k1-manifold-core/docs/: api_reference.md  benchmark_report.md  causal_projection_experiment.md  experiment_5_reproduction_protocol.md  experiment_6_physics_sensitivity.md  experiment_7_metric_controlled_normalization.md  experiment_8b_lorenz_benchmark.md  mathematical_foundations.md  physics_ai_evidence.md  v0_2_roadmap.md  v0_3_benchmark.md  v0_3_roadmap.md  v0_4_causal_reachability.md
k1-manifold-core/examples/: 01_lorentz_signature_demo.py  02_k1_dynamics_demo.py  03_light_cone_demo.py  04_information_time_demo.py  05_causal_cone_demo.py  06_k1_attractor_demo.py  benchmark_causal_reachability.py  benchmark_v03.py  benchmark_world_model_v01.py  demo_01_information_time.py  demo_02_causal_cone.py  (+2 more)
(+247 files in other folders)
